class_blog_jpa_v1/src/main/java/com/example/demo/common/errors/Exception401.java
package com.example.demo.common.errors;

public class Exception401 extends RuntimeException {

	public Exception401(String msg) {
		super();
	}
}
